<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.kkt.ted.activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <EditText
                android:id="@+id/et_search_ted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Search TED Talks"
                android:textColor="@color/white_full"
                android:textSize="@dimen/text_heading_1x" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/ll_continer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/margin_small">

            <RelativeLayout
                android:id="@+id/rl_topic_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_full">

                <TextView
                    android:id="@+id/lbl_recommended_topics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended_topics"
                    android:textColor="@color/black_full"
                    android:textSize="@dimen/text_regular_3x" />

                <xyz.kkt.ted.components.SmartRecyclerView
                    android:id="@+id/rv_topics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_recommended_topics" />

                <TextView
                    android:id="@+id/lbl_show_all_topics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rv_topics"
                    android:layout_marginLeft="@dimen/margin_medium_3"
                    android:text="@string/show_all_topics"
                    android:textColor="@color/black_full"
                    android:textSize="@dimen/text_regular_3x" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            app:cardElevation="@dimen/margin_small">

            <RelativeLayout
                android:id="@+id/rl_speaker_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:background="@color/white_full">

                <TextView
                    android:id="@+id/lbl_recommended_speakers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recommended_speakers"
                    android:textColor="@color/black_full"
                    android:textSize="@dimen/text_regular_3x" />

                <xyz.kkt.ted.components.SmartRecyclerView
                    android:id="@+id/rv_speakers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_recommended_speakers" />

                <TextView
                    android:id="@+id/lbl_show_all_speakers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rv_speakers"
                    android:layout_marginLeft="@dimen/margin_medium_3"
                    android:text="@string/show_all_topics"
                    android:textColor="@color/black_full"
                    android:textSize="@dimen/text_regular_3x" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
